// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar matches snapshot when has a category 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: translateX(-40%);
    -ms-transform: translateX(-40%);
    transform: translateX(-40%);
  }

  100% {
    -webkit-transform: translateX(140%);
    -ms-transform: translateX(140%);
    transform: translateX(140%);
  }
}

.css-1l7orhi-ProgressBar__root {
  height: 8px;
  width: 100%;
  position: relative;
  border-radius: 8px;
  overflow: hidden;
  background: #eaeff4;
}

.css-1l7orhi-ProgressBar__root [data-element="bar"] {
  border-radius: 8px;
}

.css-f49gsh-ProgressBar__bar-ProgressBar__indeterminate {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  background: #879ba6;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
  width: 50% !important;
  -webkit-animation: animation-0 calc(0.3s * 2) ease-in-out alternate infinite;
  animation: animation-0 calc(0.3s * 2) ease-in-out alternate infinite;
}

<div
  className="css-1l7orhi-ProgressBar__root undefined"
>
  <div
    className="undefined css-f49gsh-ProgressBar__bar-ProgressBar__indeterminate"
    data-element="bar"
    style={
      Object {
        "width": "NaN%",
      }
    }
  />
</div>
`;

exports[`ProgressBar matches snapshot when has a value 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: translateX(-40%);
    -ms-transform: translateX(-40%);
    transform: translateX(-40%);
  }

  100% {
    -webkit-transform: translateX(140%);
    -ms-transform: translateX(140%);
    transform: translateX(140%);
  }
}

.css-1l7orhi-ProgressBar__root {
  height: 8px;
  width: 100%;
  position: relative;
  border-radius: 8px;
  overflow: hidden;
  background: #eaeff4;
}

.css-1l7orhi-ProgressBar__root [data-element="bar"] {
  border-radius: 8px;
}

.css-f49gsh-ProgressBar__bar-ProgressBar__indeterminate {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  background: #879ba6;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
  width: 50% !important;
  -webkit-animation: animation-0 calc(0.3s * 2) ease-in-out alternate infinite;
  animation: animation-0 calc(0.3s * 2) ease-in-out alternate infinite;
}

<div
  className="css-1l7orhi-ProgressBar__root undefined"
>
  <div
    className="css-f49gsh-ProgressBar__bar-ProgressBar__indeterminate"
    data-element="bar"
    style={
      Object {
        "width": "NaN%",
      }
    }
  />
</div>
`;

exports[`ProgressBar matches snapshot when is small 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: translateX(-40%);
    -ms-transform: translateX(-40%);
    transform: translateX(-40%);
  }

  100% {
    -webkit-transform: translateX(140%);
    -ms-transform: translateX(140%);
    transform: translateX(140%);
  }
}

.css-1l7orhi-ProgressBar__root {
  height: 8px;
  width: 100%;
  position: relative;
  border-radius: 8px;
  overflow: hidden;
  background: #eaeff4;
}

.css-1l7orhi-ProgressBar__root [data-element="bar"] {
  border-radius: 8px;
}

.css-f49gsh-ProgressBar__bar-ProgressBar__indeterminate {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  background: #879ba6;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
  width: 50% !important;
  -webkit-animation: animation-0 calc(0.3s * 2) ease-in-out alternate infinite;
  animation: animation-0 calc(0.3s * 2) ease-in-out alternate infinite;
}

<div
  className="css-1l7orhi-ProgressBar__root undefined"
>
  <div
    className="css-f49gsh-ProgressBar__bar-ProgressBar__indeterminate"
    data-element="bar"
    style={
      Object {
        "width": "NaN%",
      }
    }
  />
</div>
`;
